# 3_site_builder_agent_eval

./: .gitignore  CLAUDE.md  README.md  eval_config.yaml  pyproject.toml
.claude/state/: state.md
eval-packs/: __init__.py
eval_core/: __init__.py  actions.py  config.py  continuous.py  orchestrator.py  parallel.py  routing.py  types.py
eval_core/figma/: __init__.py  extractor.py  prompt_builder.py  section_detector.py
eval_core/folder_compare/: __init__.py  content_diff.py  tree_diff.py
eval_core/judges/: __init__.py  opus_judge.py  visual_judge.py
eval_core/proxy/: __init__.py  router.py
eval_core/refiners/: __init__.py  applier.py  diff_gen.py  teacher.py
eval_core/reporters/: __init__.py  markdown.py
eval_core/runners/: __init__.py  anthropic_direct.py  base.py  bedrock.py  claude_code.py  openrouter.py
gold-standards/: template-catalogue.md
plans/: eval-round-2-plan.md  production-pipeline-design.md  think-blocks-draft.md
reports/: eval-pack-report-v1.md  eval_pack_analysis_report.md  gold_standard_scores.json
research/: research.md
scripts/: figma_to_site.py  run_round2.py
skill_enhancements/: background_image_changer_enhancement.md  colour_management_enhancement.md  global_font_management_enhancement.md  layout_transformation_enhancement.md  logo_replacement_enhancement.md  template_customization_enhancement.md
tests/: conftest.py  test_actions.py  test_cli.py  test_config.py  test_folder_compare.py  test_judge.py  test_refiners.py  test_reporter.py  test_run_manager.py  test_runner.py  test_scorer.py  test_violations.py
(+128 files in other folders)
